[project]
name = "ComfyUI-Apt_Collect"
description = "Collect some practical tools，make workflow more easier"
version = "1.0.0"
license = {file = "LICENSE"}


[project.urls]
Repository = "https://github.com/cardenluo/ComfyUI-Apt_Collect.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ardenluo"
DisplayName = "ComfyUI-Apt_Collect"
Icon = ""
